"Recalculate Normals" operator (on creating outside normals) non-functional on certain geometric volumes. #46648

Closed
opened 2015-10-30 21:29:59 +01:00 by Adam Friesen · 4 comments

System Information
Win7 64 bit, 16 igs RAM, an AMD 7xxx GPU, third gen i7 processor

Blender Version
Broken: hash 43bf78c
Worked: unknown

Short description of error'
When you have complex volumes (such as a cube made of tubes), Blender will not be able to figure out how to recalculate the normals to point outside. However, recalculating them inside works, but it doesn't make sense from a user standpoint since it would be pointing the normals toward the world rather than toward each other.

Exact steps for others to reproduce the error
Open the .blend file, switch to editmode, and recalculate the normals to point outside, Blender will do nothing.

.blend
Nbug.blend

**System Information** Win7 64 bit, 16 igs RAM, an AMD 7xxx GPU, third gen i7 processor **Blender Version** Broken: hash 43bf78c Worked: unknown **Short description of error**' When you have complex volumes (such as a cube made of tubes), Blender will not be able to figure out how to recalculate the normals to point outside. However, recalculating them inside works, but it doesn't make sense from a user standpoint since it would be pointing the normals toward the world rather than toward each other. **Exact steps for others to reproduce the error** Open the .blend file, switch to editmode, and recalculate the normals to point outside, Blender will do nothing. **.blend** [Nbug.blend](https://archive.blender.org/developer/F248578/Nbug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Ace_Dragon

Added subscriber: @Ace_Dragon

This issue was referenced by 92ab3ba385

This issue was referenced by 92ab3ba385346ca06ac31aedbc660c7939182026

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46648
No description provided.